# Agente-empleabilidad-silabos

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FRONTEND_PLAN.md  PLAN_DASHBOARD_TENDENCIAS.md  PREGUNTAS_EJEMPLO.md  README.md  agent.py  agente_consola.py  api.py  cargar_ontologia.py  estado.py  langgraph_agent.mmd  main.py  ontologia.json  requirements.txt
backend/: .env.example  README.md  langgraph.json  pyproject.toml
backend/scripts/: consola.py  ejecutar_consultas_estrategicas.py
backend/src/agente/: __init__.py
backend/src/agente/api/: servidor.py
backend/src/agente/cache/: __init__.py  consultas.py
backend/src/agente/config/: __init__.py  settings.py
backend/src/agente/dashboard/: __init__.py  consultas.py  consultas_alineacion.py  consultas_empresas.py  consultas_estrategicas.py  consultas_modelo.py  consultas_panorama.py  servicio.py
backend/src/agente/db/: neo4j.py
backend/src/agente/grafo/: constructor.py  enrutado.py  estado.py
backend/src/agente/guardas/: cypher.py  entrada.py
backend/src/agente/llm/: fabrica.py
backend/src/agente/memoria/: bloques.py  conversacional.py
backend/src/agente/nodos/: __init__.py  analiza_resultado.py  base.py  devuelve_resultado.py  ejecuta_cypher.py  genera_cypher.py  obtiene_grafo.py  (+4 more)
backend/tests/: conftest.py
backend/tests/integration/: test_flujo_auditoria.py
backend/tests/unit/: test_analiza_resultado.py  test_api.py  test_cache.py  test_consultas_dashboard.py  test_dashboard.py  test_guardas.py  test_inspector.py  test_llm.py  test_memoria.py  test_observabilidad.py  test_plantillas.py
(+107 files in other folders)
