[project]
name = "agente-ciar"
version = "2.0.0"
description = "Agente LangGraph de solo lectura para el grafo académico y laboral CIAR."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.2.0",
    "langgraph>=0.6.10",
    "neo4j>=5.28.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.10.0", "pytest>=8.0.0", "ruff>=0.9.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
agente = ["prompts/*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
